refactor code for JDK 8 compatibility